# CVIAAR

./: .dockerignore  .env  .gitignore  ARCHITECTURE_GUIDE.md  AttendanceKiosk.spec  CVIAAR_Technical_Summary.md  Cargo.toml  DOCUMENTATION.md  Dockerfile  PERFORMANCE_REPORT.md  README.md  RPI5_SETUP.md  analytics_engine.py  app.py  app_helpers_remote.py  camera.py  config.py  debug_admin.py  deploy.bat  deploy.ps1  docker-compose.yml  documentation  face_engine.py  generate_summary_pdf.py  how c2b68d1 --name-only'  kiosk.py  models.py  render.yaml  requirements.txt  run.bat  test_fixes.py  test_fixes_simple.py  wsgi.py
cviaar-analytics/: Cargo.toml  pyproject.toml
cviaar-analytics/python/cviaar_analytics/: __init__.py  engine.py
cviaar-analytics/src/: analytics.rs  lib.rs  models.rs
cviaar-vision/: Cargo.toml  PERFORMANCE.md
cviaar-vision/benches/: vision_benchmarks.rs
cviaar-vision/src/: blink.rs  detector.rs  landmarker.rs  lib.rs  spoofing.rs  utils.rs
data/: attendance.db  lbph_model.yml
docs/: README_RPI.md
modules/: analytics_engine.py  attendance_rules.py  camera.py  face_engine.py  models.py  runtime_state.py  sync_engine.py
scripts/: build_exe.bat  check_database_url.py  git-pull.sh  install_pi.sh  prepare_donation.py  retrain_model.py  run_kiosk.bat  run_kiosk.sh  run_prod.bat  run_share.bat  seed_dummy_data.py  seed_dummy_users.py  setup_autostart.bat  share_app.py
templates/: admin.html  analytics.html  audit_logs.html  edit_user.html  email_report.html  enroll.html  index.html  layout.html  login.html  re_enroll.html  report.html  (+3 more)
(+7 files in other folders)
