[package]
name = "cviaar-analytics"
version = "0.1.0"
edition = "2021"

[lib]
name = "cviaar_analytics"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
duckdb = { version = "1.4", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }